Improve: code cleanup